# token-copilot

./: .env.example  .gitignore  DOCUMENTATION.html  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-examples.txt  test_all_features.py  test_core.py  test_imports.py
examples/: azure_config.py  basic_usage.py  langgraph_example.py  persistence_example.py  test_azure_openai.py
examples/00_new_api/: 01_minimal.py  02_builder_pattern.py  03_factory_presets.py  04_context_managers.py  05_decorators.py  README.md
examples/01_basic/: budget_enforcement.py  langchain_basic.py  llamaindex_basic.py
examples/03_analytics/: anomaly_detection.py  waste_analysis.py
examples/04_routing/: model_routing.py
examples/05_streaming/: README.md  kafka_streaming.py  logstash_streaming.py  opentelemetry_streaming.py  syslog_streaming.py  webhook_streaming.py
examples/06_adaptive_operations/: README.md  basic_adaptive.py  budget_gating.py  complete_workflow.py  decorator_example.py
examples/07_advanced/: all_features.py
src/token_copilot/: __init__.py  __init__.py.old  context.py  decorators.py  presets.py
src/token_copilot/adaptive/: __init__.py  context.py  decorators.py  operations.py  tiers.py
src/token_copilot/analytics/: __init__.py  alerts.py  anomaly_detector.py  efficiency_scorer.py  waste_analyzer.py
src/token_copilot/core/: __init__.py  copilot.py  plugin.py
src/token_copilot/forecasting/: __init__.py  alert_manager.py  predictor.py
src/token_copilot/langchain/: __init__.py  callbacks.py
src/token_copilot/llamaindex/: __init__.py  callbacks.py
src/token_copilot/plugins/: __init__.py  adaptive.py  analytics.py  forecasting.py  persistence.py  routing.py  streaming.py
src/token_copilot/queuing/: __init__.py  queue_manager.py
src/token_copilot/routing/: __init__.py  router.py
src/token_copilot/streaming/: __init__.py  base.py  kafka_stream.py  logstash.py  opentelemetry.py  syslog.py  webhook.py
src/token_copilot/tracking/: __init__.py  budget.py  tracker.py
src/token_copilot/utils/: __init__.py  exceptions.py  pricing.py
tests/: conftest.py  test_adaptive_operations.py  test_context.py  test_core_copilot.py  test_core_plugin.py  test_decorators.py  test_integration.py  test_plugins_adaptive.py  test_plugins_analytics.py  test_plugins_forecasting.py  test_plugins_persistence.py  test_plugins_routing.py  test_plugins_streaming.py  test_presets.py
